--- a/packages/web-extension/package.json
+++ b/packages/web-extension/package.json
@@ -5,6 +5,7 @@
   "description": "The web extension of rrweb which helps to run rrweb on any website out of box",
   "author": "rrweb-io",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev:chrome": "cross-env TARGET_BROWSER=chrome vite dev",
     "dev:firefox": "cross-env TARGET_BROWSER=firefox vite dev",
@@ -22,10 +23,10 @@
     "@vitejs/plugin-react": "^2.1.0",
     "cross-env": "^7.0.3",
     "type-fest": "^2.19.0",
-    "vite": "^3.1.8",
-    "vite-plugin-web-extension": "^1.4.5",
+    "vite-plugin-web-extension": "4.1.3",
     "vite-plugin-zip-pack": "^1.0.5",
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "^0.10.0",
+    "vite": "^5.2.8"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
